# 2D-Platformer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
2D platformer Game/Levels/: Level3.txt  savetest.txt
2D platformer Game/include/: Button.h  GameLoop.h  Globals.h  LevelEditor.h  Object.h  PhysicsEngine.h  Test.h  Timer.h  UIelement.h  objectButton.h
2D platformer Game/src/: AnimationPlayer.cpp  GameLoop.cpp  Globals.cpp  LevelEditor.cpp  PhysicsEngine.cpp  Player.cpp  Source.cpp
Levels/: Level1.txt  Level2.txt  save2.txt
include/: AnimationPlayer.h  Button.h  Collision.h  Gridbox.h  MainMenu.h  MobileObject.h  ObjectCreator.h  Player.h  selectButton.h
src/: Button.cpp  Collision.cpp  MainMenu.cpp  Timer.cpp
